--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "take-chance": "^4.3.1",
-    "uuid": "^9.0.0"
+    "short-uuid": "^4.2.0",
+    "take-chance": "^4.3.2"
   }
 }
