--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
   ],
   "types": "dist/index.d.ts",
   "scripts": {
+    "test": "npm run build && npx jasmine",
     "start": "ts-node-dev --respawn src/index.ts",
     "build": "rmdir /s /Q dist & tsc && terser dist/index.js --output dist/index.min.js --config_file terserconfig.json --comments /^\\*\\n/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/joker876/random-id.git"
+    "url": "git+https://github.com/joker876/random-html-id.git"
   },
   "bugs": {
-    "url": "https://github.com/joker876/random-id/issues"
+    "url": "https://github.com/joker876/random-html-id/issues"
   },
-  "homepage": "https://github.com/joker876/random-id#readme",
+  "homepage": "https://github.com/joker876/random-html-id#readme",
   "keywords": [
     "id",
     "html5",
@@ -31,7 +32,11 @@
   "author": "joker876",
   "license": "MIT",
   "devDependencies": {
+    "@types/jasmine": "^4.0.3",
+    "@types/node": "^18.7.18",
     "@types/uuid": "^8.3.4",
+    "jasmine": "^4.1.0",
+    "jasmine-ts-console-reporter": "^3.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
